--- a/conf.ini
+++ b/conf.ini
@@ -1,12 +1,12 @@
 [REDDIT]
-reddit_user = XXXX
-reddit_pass = XXXX
-reddit_client_id = XXXX
-reddit_client_secret = XXXX
+reddit_user = Available-anyways
+reddit_pass = Available-anyways
+reddit_client_id = qvAeIctGx7uvow
+reddit_client_secret = B5PoNXTTWCVD9tCTG76FbI0B2bJIkw
 
 [SETTINGS]
-source_subreddit = XXXX
-target_subreddits = XXXX,XXXX,XXXX
+source_subreddit = Onlinecasino_games
+target_subreddits = onlinegambling101,XXXX,XXXX
 crosspost_text_posts = on
 crosspost_link_posts = on
 test_mode = on
