--- a/conf.ini
+++ b/conf.ini
@@ -1,12 +1,12 @@
 [REDDIT]
-reddit_user = Available-anyways
-reddit_pass = Available-anyways
-reddit_client_id = qvAeIctGx7uvow
-reddit_client_secret = B5PoNXTTWCVD9tCTG76FbI0B2bJIkw
+reddit_user = xxxx
+reddit_pass = xxxx
+reddit_client_id = xxxx
+reddit_client_secret = xxxx
 
 [SETTINGS]
-source_subreddit = Onlinecasino_games
-target_subreddits = onlinegambling101,XXXX,XXXX
+source_subreddit = xxxx
+target_subreddits = xxxx,XXXX,XXXX
 crosspost_text_posts = on
 crosspost_link_posts = on
 test_mode = on
